cambios en logo

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
     <!--Menú principal de la página / Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container d-flex">
-            <img class="img-logo" src="../Images/logos/logo.jpg" alt="logo">
+            <a href="index.html"><img class="img-logo" src="../Images/logos/logo.jpg" alt="logo"></a>
             <button class="navbar-toggler texto-medio" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
