--- a/html/cotizacion.html
+++ b/html/cotizacion.html
@@ -37,7 +37,7 @@
     <!--Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container d-flex">
-            <img class="img-logo" src="../Images/logos/logo.jpg" alt="logo">
+            <a href="index.html"><img class="img-logo" src="../Images/logos/logo.jpg" alt="logo"></a>
         </div>
     </nav>
 
