--- a/html/reserva.html
+++ b/html/reserva.html
@@ -191,7 +191,7 @@
             </div>
         </div>
         <div class="texto-footer-uno">
-            <h4 class="derechos texto-medio">© 2022 Company, Tiare. All rights reserved.</h4>
+            <h4 class="derechos texto-medio">© 2022 By Carina Bravo - All rights reserved.</h4>
         </div>
         <!--Fin de sección 3-->
     </footer>
