--- a/html/contacto.html
+++ b/html/contacto.html
@@ -43,7 +43,8 @@
     <section class="formulario__uno grid">
         <!--Sección 1 -->
         <!--Comienzo del formulario de contacto-->
-        <form id="formulario__contactanos" class="formulario__contactanos">
+        <form id="formulario__contactanos" class="formulario__contactanos" action="https://formspree.io/f/xrgdqqpr"
+            method="POST">
             <div class="contactanos">
                 <h1 class="titulo_contactanos">Formulario de contacto</h1>
                 <h2 class="texto_contactanos">Dejanos tu consulta y a la brevedad un miempro de nuestro equipo se
@@ -152,6 +153,7 @@
 
     <!--Js.-->
     <script src="../js/contacto.js"></script>
+
 </body>
 
 </html>
