--- a/html/cotizacion.html
+++ b/html/cotizacion.html
@@ -46,11 +46,11 @@
         <!--Comienzo del formulario de cotización-->
         <form id="formulario" class="formulario">
             <h1 class="titulo_cotizacion">Formulario de Cotización</h1>
-            <h2 class=" texto_cotizacion">Recuerde indicar en cada caso lo que desea para el alquiler del salón
+            <h2 class=" texto_cotizacion">Recuerde indicar en cada opción lo que desea adquirir para el alquiler de salón
                 y
                 así
                 cotizar correctamente su
-                próximo evento.</h2>
+                próximo evento!</h2>
             <!--Opciones de evento-->
             <div id="opciones"><b>Seleccione la opción deseada:</b>
                 <div class="opciones_evento"></div>
