--- a/html/reserva.html
+++ b/html/reserva.html
@@ -133,7 +133,7 @@
             </div>
             <!-- Monto de Reserva-->
             <div class="formulario__grupo__dos" id="grupo__monto">
-                <label for="monto" class="formulario__label__dos">Pago de reserva</label>
+                <label for="monto" class="formulario__label__dos">Pago de reserva en $</label>
                 <div class="formulario__grupo-input__dos">
                     <input disabled type="number" class="formulario__input__dos" name="monto" id="monto"
                         placeholder="monto de reserva">
