--- a/html/cotizacion.html
+++ b/html/cotizacion.html
@@ -44,72 +44,68 @@
     <seccion class="formulario__dos grid">
         <!--Sección 1 -->
         <!--Comienzo del formulario de cotización-->
-        <form id="formulario" class="formulario">
+        <form id="formulario" class="formulario grid">
             <h1 class="titulo_cotizacion">Formulario de Cotización</h1>
-            <h2 class=" texto_cotizacion">Recuerde indicar en cada opción lo que desea adquirir para el alquiler de salón
-                y
-                así
-                cotizar correctamente su
-                próximo evento!</h2>
+            <h2 class="texto_cotizacion">Indique en cada opción lo que desea adquirir para el alquiler del
+                salón y así poder cotizar correctamente su evento!</h2>
             <!--Opciones de evento-->
-            <div id="opciones"><b>Seleccione la opción deseada:</b>
+            <div id="opciones">
                 <div class="opciones_evento"></div>
                 <p class="formulario__input-error__tres">Ingrese una opción.</p>
             </div>
+
             <div class="servicios_dos">
                 <!-- Selección de turno -->
-                <div id="turnos"><b>Turnos disponibles:</b>
+                <div id="turnos" class="texto-turnos"><b>Turno del evento:</b>
                     <div class="turnos"></div>
                     <p class="formulario__input-error__tres">Ingrese un turno.</p>
                 </div>
                 <!-- Selección de servicios -->
                 <div id="grupo__servicios" class="servicios_salon">
-                    <label for="servicios" class="palabra_servicio">&nbsp;Servicios de salón:&nbsp;</label>
+                    <label for="servicios" class="palabra_servicio">Servicios de salón:</label>
                     <select id="servicios" name="servicios" class="servicio">
                         <option value="seleccione"><b>Seleccione</b></option>
                         <option value="si">Si</option>
                         <option value="no">No</option>
                     </select>
-                    <p class="formulario__input-error__tres">Ingrese una opción de servicio.</p>
+                    <p class="formulario__input-error__tres">Ingrese una opción.</p>
                 </div>
             </div>
             <!--Indicaciones para cotizar alquiler de salón-->
-            <div>
-                <div class="opciones_tres">
-                    <!--Calendario-->
-                    <div id="grupo__fechaEvento" class="fecha_evento">
-                        <label for="fechaEvento" class="palabra_fecha">Fecha del evento:&nbsp;</label>
-                        <input type="date" id="fecha" name="fecha" value="fecha" class="fecha">
-                        <p class="formulario__input-error__tres">Ingrese fecha.</p>
-                    </div>
-                    <!--Selección de c/horas-->
-                    <div id="grupo__numHoras" class="cantidad_horas">
-                        <label for="numHoras" class="palabra_horas">Cantidad de horas:&nbsp;</label>
-                        <input type="number" id="numHoras" class="numHoras">
-                        <p class="formulario__input-error__tres">Ingrese número de horas (Máximo 8Hs)</p>
-                    </div>
-                    <!--Selección de c/invitados-->
-                    <div id="grupo__numPersonas" class="cantidad_personas">
-                        <label for="numPersonas" class="palabra_invitados">&nbsp;Cantidad de
-                            invitados:&nbsp;</label>
-                        <input type="number" id="numPersonas" class="numPersonas">
-                        <p class="formulario__input-error__tres">Ingrese número de invitados (desde 10 hasta
-                            1.800)
-                        </p>
-                    </div>
+            <div class="opciones_tres">
+                <!--Calendario-->
+                <div id="grupo__fechaEvento" class="fecha_evento">
+                    <label for="fechaEvento" class="palabra_fecha">Fecha del evento:</label>
+                    <input type="date" id="fecha" name="fecha" value="fecha" class="fecha">
+                    <p class="formulario__input-error__tres">Ingrese una fecha.</p>
+                </div>
+                <!--Selección de c/horas-->
+                <div id="grupo__numHoras" class="cantidad_horas">
+                    <label for="numHoras" class="palabra_horas">Cuantidad de Horas:</label>
+                    <input type="number" id="numHoras" class="numHoras">
+                    <p class="formulario__input-error__tres">Hasta 8 hs.</p>
+                </div>
+                <!--Selección de c/invitados-->
+                <div id="grupo__numPersonas" class="cantidad_personas">
+                    <label for="numPersonas" class="palabra_invitados">Cantidad de Invitados:</label>
+                    <input type="number" id="numPersonas" class="numPersonas">
+                    <p class="formulario__input-error__tres">Desde 10 hasta 1.800 Inv.</p>
                 </div>
             </div>
             <!--Botón para calcular cotización-->
             <div class="btn_uno">
-                <a href="index.html"><input type="button" value="Volver" class="btn-volver"></input></a>
-                <input type="button" onclick="limpiarForm()" value="Limpiar Formulario" class="boton_cotizar">
-                <input type="button" onclick="obtenerCotizacionConReserva()" value="Cotizar Evento"
-                    class="boton_cotizar">
-                <span id="result" class="result"></span>
-                <P class="texto_reserva">Reserva:</P>
-                <span id="result-reserva" class="result_reserva"></span>
-                <a href="reserva.html" class="disabled-link"><input type="button" value="Reservar Evento"
-                        class="boton_reservar"></input></a>
+                <div>
+                    <a href="index.html"><input type="button" value="Volver" class="btn-volver"></input></a>
+                    <input type="button" onclick="limpiarForm()" value="Limpiar" class="boton_cotizar">
+                    <input type="button" onclick="obtenerCotizacionConReserva()" value="Cotizar" class="boton_cotizar">
+                </div>
+                <div>
+                    <span id="result" class="result"></span>
+                    <p class="texto_reserva disabled-reserva" id="disabled-reserva">Reserva:</p>
+                    <span id="result-reserva" class="result_reserva"></span>
+                    <a href="reserva.html" class="disabled-link" id="disabled-link"><input type="button"
+                            value="Reservar" class="boton_reservar"></input></a>
+                </div>
             </div>
         </form>
         <!--Fin del formulario de cotización-->
