--- a/html/reserva.html
+++ b/html/reserva.html
@@ -148,10 +148,10 @@
                 </div>
                 <div>
                     <button type="button" onclick="limpiarFormReservar()" value="Limpiar formulario"
-                        class="formulario__btn__dos">Cancelar Reserva</button>
+                        class="formulario__btn__dos">Cancelar</button>
                 </div>
                 <div class="formulario__grupo__dos formulario__grupo-btn-enviar__dos">
-                    <button type="submit" class="formulario__btn__dos">Confirmar Reserva</button>
+                    <button type="submit" class="formulario__btn__dos">Confirmar</button>
                 </div>
             </div>
         </form>
