--- a/html/contacto.html
+++ b/html/contacto.html
@@ -25,11 +25,12 @@
         rel="stylesheet">
     <!--Sweet Alert-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Style-css -->
+    <!-- Style-css/scss -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="../css/style.css" />
+     <!-- <link rel="stylesheet" href="../scss/style.scss" /> -->
 </head>
 
 <body>
@@ -52,7 +53,7 @@
                     en contacto con vos para asesorarte y aclarar todas tus dudas!</h2>
                 <!-- Nombre y Apellido -->
                 <div class="formulario__grupo" id="grupo__nombre">
-                    <label for="nombre" class="formulario__label">Nombre y Apellido</label>
+                    <label for="nombre" class="formulario__label texto-mayor">Nombre y Apellido</label>
                     <div class="formulario__grupo-input">
                         <input type="text" class="formulario__input" name="nombre" id="nombre"
                             placeholder="Ingrese nombre completo">
@@ -63,7 +64,7 @@
                 </div>
                 <!-- Correo Electronico -->
                 <div class="formulario__grupo" id="grupo__correo">
-                    <label for="correo" class="formulario__label">Correo Electrónico</label>
+                    <label for="correo" class="formulario__label texto-mayor">Correo Electrónico</label>
                     <div class="formulario__grupo-input">
                         <input type="email" class="formulario__input" name="correo" id="correo"
                             placeholder="nombre@correo.com">
@@ -74,7 +75,7 @@
                 </div>
                 <!-- Teléfono / Celular -->
                 <div class="formulario__grupo" id="grupo__telefono">
-                    <label for="telefono" class="formulario__label">Teléfono</label>
+                    <label for="telefono" class="formulario__label texto-mayor">Teléfono</label>
                     <div class="formulario__grupo-input">
                         <input type="text" class="formulario__input" name="telefono" id="telefono"
                             placeholder="221.1234567">
@@ -84,7 +85,7 @@
                 </div>
                 <!-- Casilla de Consulta -->
                 <div class="formulario__grupo" id="grupo__consulta">
-                    <label for="text" class="formulario__label">Consulta</label>
+                    <label for="text" class="formulario__label texto-mayor">Consulta</label>
                     <textarea class="casilla__consulta formulario__input" name="consulta" id="consulta"
                         placeholder="Ingrese consulta"></textarea>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -92,7 +93,7 @@
                 </div>
                 <!-- Promociones vía E-mail -->
                 <div class="formulario__grupo" id="grupo__terminos">
-                    <label class="formulario__label">
+                    <label class="formulario__label texto-mayor">
                         <input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
                         Deseo recibir promociones vía e-mail
                     </label>
