--- a/html/cotizacion.html
+++ b/html/cotizacion.html
@@ -25,12 +25,12 @@
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <!--Sweet Alert-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Style-css -->
+    <!-- Style-css/scss -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="../css/style.css" />
-
+    <!-- <link rel="stylesheet" href="../scss/style.scss" /> -->
 </head>
 
 <body>
@@ -56,13 +56,13 @@
 
             <div class="servicios_dos">
                 <!-- Selección de turno -->
-                <div id="turnos" class="texto-turnos"><b>Turno del evento:</b>
+                <div id="turnos" class="texto-turnos texto-mayor"><b>Turno del evento:</b>
                     <div class="turnos"></div>
                     <p class="formulario__input-error__tres">Ingrese un turno.</p>
                 </div>
                 <!-- Selección de servicios -->
                 <div id="grupo__servicios" class="servicios_salon">
-                    <label for="servicios" class="palabra_servicio">Servicios de salón:</label>
+                    <label for="servicios" class="palabra_servicio texto-mayor">Servicios de salón:</label>
                     <select id="servicios" name="servicios" class="servicio">
                         <option value="seleccione"><b>Seleccione</b></option>
                         <option value="si">Si</option>
@@ -75,19 +75,19 @@
             <div class="opciones_tres">
                 <!--Calendario-->
                 <div id="grupo__fechaEvento" class="fecha_evento">
-                    <label for="fechaEvento" class="palabra_fecha">Fecha del evento:</label>
+                    <label for="fechaEvento" class="palabra_fecha texto-mayor">Fecha del evento:</label>
                     <input type="date" id="fecha" name="fecha" value="fecha" class="fecha">
                     <p class="formulario__input-error__tres">Ingrese una fecha.</p>
                 </div>
                 <!--Selección de c/horas-->
                 <div id="grupo__numHoras" class="cantidad_horas">
-                    <label for="numHoras" class="palabra_horas">Cuantidad de Horas:</label>
+                    <label for="numHoras" class="palabra_horas texto-mayor">Cuantidad de Horas:</label>
                     <input type="number" id="numHoras" class="numHoras">
                     <p class="formulario__input-error__tres">Hasta 8 hs.</p>
                 </div>
                 <!--Selección de c/invitados-->
                 <div id="grupo__numPersonas" class="cantidad_personas">
-                    <label for="numPersonas" class="palabra_invitados">Cantidad de Invitados:</label>
+                    <label for="numPersonas" class="palabra_invitados texto-mayor">Cantidad de Invitados:</label>
                     <input type="number" id="numPersonas" class="numPersonas">
                     <p class="formulario__input-error__tres">Desde 10 hasta 1.800 Inv.</p>
                 </div>
@@ -101,7 +101,7 @@
                 </div>
                 <div>
                     <span id="result" class="result"></span>
-                    <p class="texto_reserva disabled-reserva" id="disabled-reserva">Reserva:</p>
+                    <p class="texto_reserva disabled-reserva texto-mayor" id="disabled-reserva">Reserva:</p>
                     <span id="result-reserva" class="result_reserva"></span>
                     <a href="reserva.html" class="disabled-link" id="disabled-link"><input type="button"
                             value="Reservar" class="boton_reservar"></input></a>
