se modifica link

--- a/html/cotizacion.html
+++ b/html/cotizacion.html
@@ -25,12 +25,11 @@
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <!--Sweet Alert-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Style-css/scss -->
+    <!-- Style-css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="../css/style.css" />
-    <!-- <link rel="stylesheet" href="../scss/style.scss" /> -->
 </head>
 
 <body>
@@ -56,7 +55,7 @@
 
             <div class="servicios_dos">
                 <!-- Selección de turno -->
-                <div id="turnos" class="texto-turnos texto-mayor"><b>Turno del evento:</b>
+                <div id="turnos" class="texto-turnos"><b>Turno del evento:</b>
                     <div class="turnos"></div>
                     <p class="formulario__input-error__tres">Ingrese un turno.</p>
                 </div>
