--- a/html/contacto.html
+++ b/html/contacto.html
@@ -25,12 +25,11 @@
         rel="stylesheet">
     <!--Sweet Alert-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Style-css/scss -->
+    <!-- Style-css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="../css/style.css" />
-     <!-- <link rel="stylesheet" href="../scss/style.scss" /> -->
 </head>
 
 <body>
