--- a/html/index.html
+++ b/html/index.html
@@ -102,8 +102,8 @@
                     <div class="opcion texto-medio">Elegì la fecha que necesites y nosotros te congelamos el precio,
                         luego
                         coordinamos una
-                        entrevista para que conozcas nuestro Salón Tiare y si decides cambiar de
-                        idea, te devolvemos tu dinero. Reservar tu fecha nunca fue tan facil.
+                        entrevista para que conozcas nuestro Salón Tiare y si decidís cambiar de
+                        idea, te devolvemos tu dinero. Reservar tu fecha nunca fue tan fácil.
                     </div>
                 </div>
             </div>
