--- a/html/contacto.html
+++ b/html/contacto.html
@@ -46,7 +46,8 @@
         <form id="formulario__contactanos" class="formulario__contactanos" action="https://formspree.io/f/xrgdqqpr"
             method="POST">
             <div class="contactanos">
-                <h1 class="titulo_contactanos">Formulario de Contacto</h1>
+                <h1 class="titulo_contactanos" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
+                    Formulario de Contacto</h1>
                 <h2 class="texto_contactanos">Dejanos tu consulta y a la brevedad un miembro de nuestro equipo se
                     pondrá
                     en contacto con vos para asesorarte y aclarar todas tus dudas!</h2>
