--- a/html/reserva.html
+++ b/html/reserva.html
@@ -44,7 +44,8 @@
         <!--Sección 1 -->
         <!--Comienzo del formulario de reserva-->
         <form id="formulario__reservar" class="formulario__reservar">
-            <h1 class="titulo_reservar">Formulario de Reserva</h1>
+            <h1 class="titulo_reservar" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
+                Formulario de Reserva</h1>
             <!-- Datos personales -->
             <h2 class="texto_reservar_uno texto-mayor">Información de Contacto</h2>
             <!-- Nombre y Apellido -->
@@ -83,7 +84,8 @@
             <h2 class="texto_reservar_dos texto-mayor">Información de Pago</h2>
             <!-- Nombre completo del titular -->
             <div class="formulario__grupo__dos" id="grupo__nombre__tres">
-                <label for="nombre__tres" class="formulario__label__dos texto-mayor">Nombre y Apellido del titular</label>
+                <label for="nombre__tres" class="formulario__label__dos texto-mayor">Nombre y Apellido del
+                    titular</label>
                 <div class="formulario__grupo-input__dos">
                     <input type="text" class="formulario__input__dos" name="nombre__tres" id="nombre__tres"
                         placeholder="Ingrese nombre completo del titular">
