cambios en texto de reserva

--- a/html/index.html
+++ b/html/index.html
@@ -89,7 +89,7 @@
                 <div class="texto-reservas">
                     <h2 class="titulo-reserva texto-mayor" data-aos="fade-down" data-aos-easing="linear"
                         data-aos-duration="1000">Reserva Online</h2>
-                    <p class="parrafo-reserva texto-medio">Descubrí una nueva forma de cotizar y reservar la fecha para
+                    <p class="parrafo-reserva texto-medio">Descubrí una nueva forma de reservar la fecha para
                         tu evento!
                     </p>
                 </div>
