modificaciones en texto

--- a/html/index.html
+++ b/html/index.html
@@ -63,11 +63,13 @@
             <!--Presentación y descripción breve del salón de eventos-->
             <div class="textos-tiare">
                 <h1 class="titulo-tiare texto-mayor">Bienvenidos a Tiare</h1>
-                <p class="parrafo-tiare texto-medio">Un salón amplio, moderno, elegante y funcional con instalaciones de
+                <p class="parrafo-tiare texto-medio">Un salón amplio, moderno, elegante y funcional, con instalaciones
+                    de
                     categoría
-                    y máximo confort. El mismo cuenta con 800m<sup>2</sup> y 500m<sup>2</sup> de galería, con una
-                    capacidad de hasta 1800 personas. Ubicandose en la zona más exclusiva de nuestra Ciudad, en donde
-                    podrás realizar eventos sociales como empresariales.
+                    y máximo confort. 
+                    <br>El mismo cuenta con 800m<sup>2</sup> y 500m<sup>2</sup> de galería y
+                    capacidad de hasta 1800 personas, ubicándose en la zona más exclusiva de nuestra Ciudad, en donde
+                    podrás realizar diferentes eventos sociales como empresariales.
                 </p>
                 <!--Botón de contacto-->
                 <a href="contacto.html"><input type="button" class="button-uno texto-medio"
@@ -168,7 +170,7 @@
                     calidez de nuestros servicios.
                     <br>Además cabe destacar que en Salón Tiare cada uno de nuestros espacios
                     fueron pensados y diseñados para que tus eventos sean realizados con el mejor confort,
-                    categoría y con un gran contacto con la naturaleza, siendo así cada evento especial e
+                    categoría y con un gran contacto con la naturaleza, siendo así, cada evento especial e
                     inolvidable!
                 </p>
             </div>
