--- a/html/index.html
+++ b/html/index.html
@@ -39,19 +39,19 @@
 <body>
     <!--Menú principal de la página / Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <div class="container d-flex">
+        <div class="container-fluid px-5 d-flex">
             <a href="index.html"><img class="img-logo" src="../Images/logos/logo.jpg" alt="logo"></a>
             <button class="navbar-toggler texto-medio" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
             </button>
             <div class="collapse navbar-collapse texto-mayor flex-grow-0" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav py-3">
                     <li><a class="nav-link" aria-hidden="true" href="#home">HOME</a></li>
-                    <li><a class="nav-link" aria-hidden="true" href="#reservas"> RESERVAS</a></li>
-                    <li><a class="nav-link" aria-hidden="true" href="#servicios"> SERVICIOS</a></li>
-                    <li><a class="nav-link" aria-hidden="true" href="#empresa"> NUESTRA EMPRESA</a></li>
-                    <li><a class="nav-link" aria-hidden="true" href="#redes-sociales"> SEGUINOS</a></li>
+                    <li><a class="nav-link" aria-hidden="true" href="#reservas">RESERVAS</a></li>
+                    <li><a class="nav-link" aria-hidden="true" href="#servicios">SERVICIOS</a></li>
+                    <li><a class="nav-link" aria-hidden="true" href="#empresa">NUESTRA EMPRESA</a></li>
+                    <li><a class="nav-link" aria-hidden="true" href="#redes-sociales">SEGUINOS</a></li>
                 </ul>
             </div>
         </div>
