ajuste del nav y color de reserva

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -35,7 +35,7 @@
 <body>
     <!--Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <div class="container d-flex">
+        <div class="container-fluid px-5 py-2 d-flex">
             <a href="index.html"><img class="img-logo" src="../Images/logos/logo.jpg" alt="logo"></a>
         </div>
     </nav>
