--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
 <body>
     <!--Menú principal de la página / Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <div class="container-fluid px-5 d-flex">
+        <div class="container-fluid px-5 py-2 d-flex">
             <a href="index.html"><img class="img-logo" src="../Images/logos/logo.jpg" alt="logo"></a>
             <button class="navbar-toggler texto-medio" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
