cambios en medidas de fuente y botones

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salón de eventos Tiare</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="../Images/logos/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/logos/favicon.jpg" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -47,7 +47,7 @@
             method="POST">
             <div class="contactanos">
                 <h1 class="titulo_contactanos" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-                    Formulario de Contacto</h1>
+                    FORMULARIO DE CONTACTO</h1>
                 <h2 class="texto_contactanos">Dejanos tu consulta y a la brevedad un miembro de nuestro equipo se
                     pondrá
                     en contacto con vos para asesorarte y aclarar todas tus dudas!</h2>
@@ -101,15 +101,15 @@
                 <!-- Botones -->
                 <div class="btn__dos">
                     <div class="formulario__grupo formulario__grupo-btn-limpiar">
-                        <a href="index.html"><input type="button" value="Volver" class="btn_volver"></input></a>
+                        <a href="index.html"><input type="button" value="VOLVER" class="btn_volver"></input></a>
                     </div>
                     <div>
                         <button type="button" onclick="limpiarFormContacto()" value="Limpiar formulario"
-                            class="formulario__btn">Limpiar</button>
+                            class="formulario__btn">LIMPIAR</button>
 
                     </div>
                     <div class="formulario__grupo formulario__grupo-btn-enviar">
-                        <button type="submit" class="formulario__btn">Enviar</button>
+                        <button type="submit" class="formulario__btn">ENVIAR</button>
                     </div>
                 </div>
         </form>
@@ -122,9 +122,7 @@
         <div class="grid">
             <!--Redes sociales-->
             <div class="texto-footer texto-medio">
-                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">Salón de
-                    Eventos
-                    Tiare</h2>
+                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE</h2>
                 <h3 class="subtitulo-footer texto-medio">Seguinos en nuestras redes y enterate de todas las
                     novedades que tenemos para vos!</h3>
             </div>
