--- a/html/cotizacion.html
+++ b/html/cotizacion.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salón de eventos Tiare</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="../Images/logos/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/logos/favicon.jpg" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -45,7 +45,7 @@
         <!--Comienzo del formulario de cotización-->
         <form id="formulario" class="formulario grid">
             <h1 class="titulo_cotizacion" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-                Formulario de Cotización</h1>
+                FORMULARIO DE COTIZACIÓN</h1>
             <h2 class="texto_cotizacion">Indique en cada opción lo que desea adquirir para el alquiler del
                 salón y así poder cotizar correctamente su evento!</h2>
             <!--Opciones de evento-->
@@ -95,16 +95,16 @@
             <!--Botón para calcular cotización-->
             <div class="btn_uno">
                 <div>
-                    <a href="index.html"><input type="button" value="Volver" class="btn-volver"></input></a>
-                    <input type="button" onclick="limpiarForm()" value="Limpiar" class="boton_cotizar">
-                    <input type="button" onclick="obtenerCotizacionConReserva()" value="Cotizar" class="boton_cotizar">
+                    <a href="index.html"><input type="button" value="VOLVER" class="btn-volver"></input></a>
+                    <input type="button" onclick="limpiarForm()" value="LIMPIAR" class="boton_cotizar">
+                    <input type="button" onclick="obtenerCotizacionConReserva()" value="COTIZAR" class="boton_cotizar">
                 </div>
                 <div>
                     <span id="result" class="result"></span>
                     <p class="texto_reserva disabled-reserva texto-mayor" id="disabled-reserva">Reserva:</p>
                     <span id="result-reserva" class="result_reserva"></span>
                     <a href="reserva.html" class="disabled-link" id="disabled-link"><input type="button"
-                            value="Reservar" class="boton_reservar"></input></a>
+                            value="RESERVAR" class="boton_reservar"></input></a>
                 </div>
             </div>
         </form>
@@ -117,9 +117,7 @@
         <div class="grid">
             <!--Redes sociales-->
             <div class="texto-footer texto-medio">
-                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">Salón de
-                    Eventos
-                    Tiare</h2>
+                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE</h2>
                 <h3 class="subtitulo-footer texto-medio">Seguinos en nuestras redes y enterate de todas las
                     novedades que tenemos para vos!</h3>
             </div>
