--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- favicon -->
-    <link rel="shortcut icon" href="../Images/logos/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/logos/favicon.jpg" type="image/x-icon">
     <!-- Google-font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,7 +62,7 @@
         <section id="home" class="grid">
             <!--Presentación y descripción breve del salón de eventos-->
             <div class="textos-tiare">
-                <h1 class="titulo-tiare texto-mayor">Bienvenidos a Tiare</h1>
+                <h1 class="titulo-tiare texto-mayor">BIENVENIDOS A TIARE</h1>
                 <p class="parrafo-tiare texto-medio">Un salón amplio, moderno, elegante y funcional, con instalaciones
                     de
                     categoría
@@ -73,7 +73,7 @@
                 </p>
                 <!--Botón de contacto-->
                 <a href="contacto.html"><input type="button" class="button-uno texto-medio"
-                        value="Contactanos"></input></a>
+                        value="CONTACTANOS"></input></a>
             </div>
             <!--Imagen principal del salón de eventos-->
             <div class="img-salon-eventos">
@@ -90,7 +90,7 @@
             <div class="grid">
                 <div class="texto-reservas">
                     <h2 class="titulo-reserva texto-mayor" data-aos="fade-down" data-aos-easing="linear"
-                        data-aos-duration="1000">Reserva Online</h2>
+                        data-aos-duration="1000">RESERVAS ONLINE</h2>
                     <p class="parrafo-reserva texto-medio">Descubrí una nueva forma de reservar la fecha para
                         tu evento!
                     </p>
@@ -98,7 +98,7 @@
                 <div class="button-cotizar">
                     <!--Botón de cotizar-->
                     <a href="cotizacion.html"><input type="button" class="button-dos texto-medio"
-                            value="Cotizar Evento"></input></a>
+                            value="COTIZAR EVENTO"></input></a>
                 </div>
                 <div class="opcion-de-reserva">
                     <div class="opcion texto-medio">Elegì la fecha que necesites y nosotros te congelamos el precio,
@@ -115,13 +115,13 @@
         <section id="servicios" class="servicios">
             <!--Servicios ofrecidos por la empresa-->
             <section class="grid">
-                <h2 class="titulo-servicios texto-mayor">Servicios de Salón</h2>
+                <h2 class="titulo-servicios texto-mayor">SERVICIOS DE SALÓN</h2>
                 <div class="items">
                     <!--Servicio 1 - Catering-->
                     <div class="item">
                         <img class="img-servicio" src="../Images/servicios/catering.jpg" alt="catering"
                             data-aos="zoom-in" data-aos-duration="1000">
-                        <h2 class="subtitulo-servicio texto-mayor">Catering</h2>
+                        <h2 class="subtitulo-servicio texto-mayor">CATERING</h2>
                         <p class="texto-servicio texto-medio">Ofrecemos un servicio de catering de excelencia con
                             diversas opciones
                             de menùs nacionales e internacionales. Comida vanguardista para paladares exigentes,
@@ -131,7 +131,7 @@
                     <div class="item">
                         <img class="img-servicio" src="../Images/servicios/dj-sonido.jpg" alt="dj" data-aos="zoom-in"
                             data-aos-duration="1000">
-                        <h2 class="subtitulo-servicio texto-mayor">Disc-Jockey</h2>
+                        <h2 class="subtitulo-servicio texto-mayor">DISC-JOCKEY</h2>
                         <p class="texto-servicio texto-medio">Ofrecemos un servicio de Disc-Jockey con sonido e
                             iluminación
                             profesional, video, fotografía, pantalla, maquina de humo y burbujas. Un servicio adecuado
@@ -141,7 +141,7 @@
                     <div class="item">
                         <img class="img-servicio" src="../Images/servicios/barra.jpg" alt="barra libre"
                             data-aos="zoom-in" data-aos-duration="1000">
-                        <h2 class="subtitulo-servicio texto-mayor">Barra Libre</h2>
+                        <h2 class="subtitulo-servicio texto-mayor">BARRA LIBRE</h2>
                         <p class="texto-servicio texto-medio">Ofrecemos un servicio exclusivo para tu evento, con
                             etiquetas de
                             primera calidad, personal capacitado y cocktails de autor. Brindando un servicio
@@ -155,9 +155,7 @@
         <section id="empresa" class="nuestra-empresa grid">
             <!--Historia y presentación breve de la empresa-->
             <div class="textos-nuestra-empresa">
-                <h2 class="titulo-empresa texto-mayor" data-aos="fade-left" data-aos-duration="1500">Nuestra
-                    Empresa
-                </h2>
+                <h2 class="titulo-empresa texto-mayor" data-aos="fade-left" data-aos-duration="1500">NUESTRA EMPRESA</h2>
                 <p class="parrafo-empresa texto-medio">Somos un equipo conformado por mujeres especialistas en
                     la
                     organización y
@@ -197,9 +195,7 @@
         <div class="grid">
             <!--Redes sociales-->
             <div class="texto-footer texto-medio">
-                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">Salón de
-                    Eventos
-                    Tiare</h2>
+                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE</h2>
                 <h3 class="subtitulo-footer texto-medio">Seguinos en nuestras redes y enterate de todas las
                     novedades que tenemos para vos!</h3>
             </div class="icon">
