--- a/html/reserva.html
+++ b/html/reserva.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Salón de eventos Tiare</title>
+    <title>SALÓN DE EVENTOS TIARE</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="../Images/logos/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/logos/favicon.jpg" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -45,9 +45,9 @@
         <!--Comienzo del formulario de reserva-->
         <form id="formulario__reservar" class="formulario__reservar">
             <h1 class="titulo_reservar" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-                Formulario de Reserva</h1>
+                FORMULARIO DE RESERVA</h1>
             <!-- Datos personales -->
-            <h2 class="texto_reservar_uno texto-mayor">Información de Contacto</h2>
+            <h2 class="texto_reservar_uno texto-mayor">INFORMACIÓN DE CONTACTO</h2>
             <!-- Nombre y Apellido -->
             <div class="formulario__grupo__dos" id="grupo__nombre__dos">
                 <label for="nombre__dos" class="formulario__label__dos texto-mayor">Nombre y Apellido</label>
@@ -81,7 +81,7 @@
                 <p class="formulario__input-error__dos">Solo debe contener números y punto.</p>
             </div>
             <!-- Datos de la tarjeta -->
-            <h2 class="texto_reservar_dos texto-mayor">Información de Pago</h2>
+            <h2 class="texto_reservar_dos texto-mayor">INFORMACIÓN DE PAGO</h2>
             <!-- Nombre completo del titular -->
             <div class="formulario__grupo__dos" id="grupo__nombre__tres">
                 <label for="nombre__tres" class="formulario__label__dos texto-mayor">Nombre y Apellido del
@@ -146,14 +146,14 @@
             <!-- Botones -->
             <div class="btn__tres">
                 <div class="formulario__grupo__dos formulario__grupo-btn-limpiar__dos">
-                    <a href="index.html"><input type="button" value="Salir" class="btn_salir"></input></a>
+                    <a href="index.html"><input type="button" value="SALIR" class="btn_salir"></input></a>
                 </div>
                 <div>
                     <button type="button" onclick="limpiarFormReservar()" value="Limpiar formulario"
-                        class="formulario__btn__dos">Cancelar</button>
+                        class="formulario__btn__dos">CANCELAR</button>
                 </div>
                 <div class="formulario__grupo__dos formulario__grupo-btn-enviar__dos">
-                    <button type="submit" class="formulario__btn__dos">Confirmar</button>
+                    <button type="submit" class="formulario__btn__dos">CONFIRMAR</button>
                 </div>
             </div>
         </form>
@@ -175,9 +175,7 @@
         <div class="grid">
             <!--Redes sociales-->
             <div class="texto-footer texto-medio">
-                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">Salón de
-                    Eventos
-                    Tiare</h2>
+                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE</h2>
                 <h3 class="subtitulo-footer texto-medio">Seguinos en nuestras redes y enterate de todas las
                     novedades que tenemos para vos!</h3>
             </div>
