ajustes de margenes

--- a/html/index.html
+++ b/html/index.html
@@ -63,7 +63,7 @@
             <!--Presentación y descripción breve del salón de eventos-->
             <div class="textos-tiare">
                 <h1 class="titulo-tiare texto-mayor">BIENVENIDOS A TIARE</h1>
-                <p class="parrafo-tiare texto-medio">Un salón amplio, moderno, elegante y funcional, con instalaciones
+                <p class="parrafo-tiare texto-medio">Un salón amplio, elegante y funcional, con instalaciones
                     de
                     categoría
                     y máximo confort. 
