ajuste en el nav y título de reserva

--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
                 aria-label="Toggle navigation">
             </button>
             <div class="collapse navbar-collapse texto-mayor flex-grow-0" id="navbarNav">
-                <ul class="navbar-nav py-3">
+                <ul class="navbar-nav mt-3">
                     <li><a class="nav-link" aria-hidden="true" href="#home">HOME</a></li>
                     <li><a class="nav-link" aria-hidden="true" href="#reservas">RESERVAS</a></li>
                     <li><a class="nav-link" aria-hidden="true" href="#servicios">SERVICIOS</a></li>
