ajuste en el padding del nav

--- a/html/index.html
+++ b/html/index.html
@@ -39,14 +39,14 @@
 <body>
     <!--Menú principal de la página / Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <div class="container-fluid px-5 py-2 d-flex">
+        <div class="container-fluid px-5 py-3 d-flex">
             <a href="index.html"><img class="img-logo" src="../Images/logos/logo.jpg" alt="logo"></a>
             <button class="navbar-toggler texto-medio" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
             </button>
             <div class="collapse navbar-collapse texto-mayor flex-grow-0" id="navbarNav">
-                <ul class="navbar-nav mt-3">
+                <ul class="navbar-nav">
                     <li><a class="nav-link" aria-hidden="true" href="#home">HOME</a></li>
                     <li><a class="nav-link" aria-hidden="true" href="#reservas">RESERVAS</a></li>
                     <li><a class="nav-link" aria-hidden="true" href="#servicios">SERVICIOS</a></li>
