ajustes de fuentes gral.

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -46,7 +46,7 @@
         <form id="formulario__contactanos" class="formulario__contactanos" action="https://formspree.io/f/xrgdqqpr"
             method="POST">
             <div class="contactanos">
-                <h1 class="titulo_contactanos" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
+                <h1 class="titulo_contactanos texto-mayor" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
                     FORMULARIO DE CONTACTO</h1>
                 <h2 class="texto_contactanos">Dejanos tu consulta y a la brevedad un miembro de nuestro equipo se
                     pondrá
