--- a/html/cotizacion.html
+++ b/html/cotizacion.html
@@ -44,7 +44,7 @@
         <!--Sección 1 -->
         <!--Comienzo del formulario de cotización-->
         <form id="formulario" class="formulario grid">
-            <h1 class="titulo_cotizacion" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
+            <h1 class="titulo_cotizacion texto-mayor" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
                 FORMULARIO DE COTIZACIÓN</h1>
             <h2 class="texto_cotizacion">Indique en cada opción lo que desea adquirir para el alquiler del
                 salón y así poder cotizar correctamente su evento!</h2>
