se ajustan y modifican estilos varios

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -130,7 +130,7 @@
                 <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
             </div>
             <div class="footer-item2">
-                <a href="https://twitter.com/home"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
             </div>
             <div class="footer-item3">
                 <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
