--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,7 @@
                 <p class="parrafo-tiare texto-medio">Un salón amplio, elegante y funcional, con instalaciones
                     de
                     categoría
-                    y máximo confort. 
+                    y máximo confort.
                     <br>El mismo cuenta con 800m<sup>2</sup> y 500m<sup>2</sup> de galería y
                     capacidad de hasta 1800 personas, ubicándose en la zona más exclusiva de nuestra Ciudad, en donde
                     podrás realizar diferentes eventos sociales como empresariales.
@@ -90,7 +90,7 @@
             <div class="grid">
                 <div class="texto-reservas">
                     <h2 class="titulo-reserva texto-mayor" data-aos="fade-down" data-aos-easing="linear"
-                        data-aos-duration="1000">RESERVAS ONLINE</h2>
+                        data-aos-duration="1000">RESERVA ONLINE</h2>
                     <p class="parrafo-reserva texto-medio">Descubrí una nueva forma de reservar la fecha para
                         tu evento!
                     </p>
@@ -98,15 +98,9 @@
                 <div class="button-cotizar">
                     <!--Botón de cotizar-->
                     <a href="cotizacion.html"><input type="button" class="button-dos texto-medio"
-                            value="COTIZAR EVENTO"></input></a>
+                            value="COTIZAR MI EVENTO"></input></a>
                 </div>
                 <div class="opcion-de-reserva">
-                    <div class="opcion texto-medio">Elegì la fecha que necesites y nosotros te congelamos el precio,
-                        luego
-                        coordinamos una
-                        entrevista para que conozcas nuestro Salón Tiare y si decidís cambiar de
-                        idea, te devolvemos tu dinero. Reservar tu fecha nunca fue tan fácil.
-                    </div>
                 </div>
             </div>
             <!--Fin de sección 2-->
@@ -155,7 +149,8 @@
         <section id="empresa" class="nuestra-empresa grid">
             <!--Historia y presentación breve de la empresa-->
             <div class="textos-nuestra-empresa">
-                <h2 class="titulo-empresa texto-mayor" data-aos="fade-left" data-aos-duration="1500">NUESTRA EMPRESA</h2>
+                <h2 class="titulo-empresa texto-mayor" data-aos="fade-left" data-aos-duration="1500">NUESTRA EMPRESA
+                </h2>
                 <p class="parrafo-empresa texto-medio">Somos un equipo conformado por mujeres especialistas en
                     la
                     organización y
@@ -195,7 +190,8 @@
         <div class="grid">
             <!--Redes sociales-->
             <div class="texto-footer texto-medio">
-                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE</h2>
+                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE
+                </h2>
                 <h3 class="subtitulo-footer texto-medio">Seguinos en nuestras redes y enterate de todas las
                     novedades que tenemos para vos!</h3>
             </div class="icon">
@@ -203,7 +199,7 @@
                 <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
             </div>
             <div class="footer-item2">
-                <a href="https://twitter.com/home"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
             </div>
             <div class="footer-item3">
                 <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
