--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salón de eventos Tiare</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="../Images/logos/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./Images/logos/favicon.jpg" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -29,14 +29,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
     <!--Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid px-5 py-3 d-flex">
-            <a href="index.html"><img class="img-logo" src="../Images/logos/logo.jpg" alt="logo"></a>
+            <a href="index.html"><img class="img-logo" src="./Images/logos/logo.jpg" alt="logo"></a>
         </div>
     </nav>
 
@@ -151,7 +151,7 @@
     <script>AOS.init();</script>
 
     <!--Js.-->
-    <script src="../js/contacto.js"></script>
+    <script src="./js/contacto.js"></script>
 
 </body>
 
