--- a/cotizacion.html
+++ b/cotizacion.html
@@ -119,7 +119,7 @@
             <div class="texto-footer texto-medio">
                 <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE</h2>
                 <h3 class="subtitulo-footer texto-medio">Seguinos en nuestras redes y enterate de todas las
-                    novedades que tenemos para vos!</h3>
+                    novedades!</h3>
             </div>
             <div class="footer-item1">
                 <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
