se modifican formularios

--- a/cotizacion.html
+++ b/cotizacion.html
@@ -44,10 +44,11 @@
         <!--Sección 1 -->
         <!--Comienzo del formulario de cotización-->
         <form id="formulario" class="formulario grid">
-            <h1 class="titulo_cotizacion texto-mayor" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
+            <h1 class="titulo_cotizacion texto-mayor" data-aos="fade-down" data-aos-easing="linear"
+                data-aos-duration="1000">
                 FORMULARIO DE COTIZACIÓN</h1>
             <h2 class="texto_cotizacion">Indique en cada opción lo que desea adquirir para el alquiler del
-                salón y así poder cotizar correctamente su evento!</h2>
+                salón y así poder cotizar correctamente su próximo evento y disfrutar al máximo!</h2>
             <!--Opciones de evento-->
             <div id="opciones">
                 <div class="opciones_evento"></div>
@@ -64,7 +65,7 @@
                 <div id="grupo__servicios" class="servicios_salon">
                     <label for="servicios" class="palabra_servicio texto-mayor">Servicios de salón:</label>
                     <select id="servicios" name="servicios" class="servicio">
-                        <option value="seleccione"><b>Seleccione</b></option>
+                        <option value="seleccione"><b>seleccione</b></option>
                         <option value="si">Si</option>
                         <option value="no">No</option>
                     </select>
@@ -117,7 +118,8 @@
         <div class="grid">
             <!--Redes sociales-->
             <div class="texto-footer texto-medio">
-                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE</h2>
+                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE
+                </h2>
                 <h3 class="subtitulo-footer texto-medio">Seguinos en nuestras redes y enterate de todas las
                     novedades!</h3>
             </div>
