se modifican formularios y medidas

--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,8 @@
         <form id="formulario__contactanos" class="formulario__contactanos" action="https://formspree.io/f/xrgdqqpr"
             method="POST">
             <div class="contactanos">
-                <h1 class="titulo_contactanos texto-mayor" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
+                <h1 class="titulo_contactanos texto-mayor" data-aos="fade-down" data-aos-easing="linear"
+                    data-aos-duration="1000">
                     FORMULARIO DE CONTACTO</h1>
                 <h2 class="texto_contactanos">Dejanos tu consulta y a la brevedad un miembro de nuestro equipo se
                     pondrá
@@ -122,7 +123,8 @@
         <div class="grid">
             <!--Redes sociales-->
             <div class="texto-footer texto-medio">
-                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE</h2>
+                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE
+                </h2>
                 <h3 class="subtitulo-footer texto-medio">Seguinos en nuestras redes y enterate de todas las
                     novedades!</h3>
             </div>
