--- a/cotizacion.html
+++ b/cotizacion.html
@@ -66,8 +66,8 @@
                     <label for="servicios" class="palabra_servicio texto-mayor">Servicios de salón:</label>
                     <select id="servicios" name="servicios" class="servicio">
                         <option value="seleccione"><b>seleccione</b></option>
-                        <option value="si">Si</option>
-                        <option value="no">No</option>
+                        <option value="si">si</option>
+                        <option value="no">no</option>
                     </select>
                     <p class="formulario__input-error__tres">Ingrese una opción.</p>
                 </div>
