--- a/cotizacion.html
+++ b/cotizacion.html
@@ -36,7 +36,9 @@
     <!--Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid px-5 py-3 d-flex">
-            <a href="index.html"><img class="img-logo" src="./Images/logos/logo.jpg" alt="logo"></a>
+            <a href="index.html" style="text-decoration: none;">
+                <h1 class="logo texto-medio">TIARE</h1>
+            </a>
         </div>
     </nav>
 
