--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <!--Menú principal de la página / Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid px-5 py-3 d-flex">
-            <a href="index.html"><img class="img-logo" src="./Images/logos/logo.jpg" alt="logo"></a>
+            <a href="index.html" style="text-decoration: none;">
+                <h1 class="logo texto-medio">TIARE</h1>
+            </a>
             <button class="navbar-toggler texto-medio" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
