se modifica fuente de logo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid px-5 py-3 d-flex">
             <a href="index.html" style="text-decoration: none;">
-                <h1 class="logo texto-medio">TIARE</h1>
+                <h1 class="logo texto-mayor">TIARE</h1>
             </a>
             <button class="navbar-toggler texto-medio" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
