--- a/contacto.html
+++ b/contacto.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid px-5 py-3 d-flex">
             <a href="index.html" style="text-decoration: none;">
-                <h1 class="logo texto-medio">TIARE</h1>
+                <h1 class="logo texto-mayor">TIARE</h1>
             </a>
         </div>
     </nav>
