se agrega icono en navbar

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             </a>
             <button class="navbar-toggler texto-medio" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-            </button>
+                aria-label="Toggle navigation"><i class="fa-solid fa-house"></i></button>
             <div class="collapse navbar-collapse texto-mayor flex-grow-0" id="navbarNav">
                 <ul class="navbar-nav">
                     <li><a class="nav-link" aria-hidden="true" href="#home">HOME</a></li>
