se modifican titulos

--- a/cotizacion.html
+++ b/cotizacion.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Salón de eventos Tiare</title>
+    <title>Salón de eventos | Cotización</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./Images/logos/favicon.jpg" type="image/x-icon">
     <!-- Bootstrap -->
