--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="Salón para Eventos. Somos un equipo de profesionales especializado en la organización de eventos formales e informales. Reserva online.">
     <meta name="keywords"
         content="Aquiler de salón para eventos, casamientos, cumpleaños, 15 años, bautismos, despedidas, reuniones empresariales.">
-    <title>Salón de eventos Tiare</title>
+    <title>Salón de eventos</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
