se modifican medidas

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <section id="home" class="grid">
             <!--Presentación y descripción breve del salón de eventos-->
             <div class="textos-tiare">
-                <h1 class="titulo-tiare texto-mayor">BIENVENIDOS A TIARE</h1>
-                <p class="parrafo-tiare texto-medio">Un salón amplio, elegante y funcional, con instalaciones
+                <h1 class="titulo-tiare texto-mayor">NUESTRO SALÓN</h1>
+                <p class="parrafo-tiare texto-medio">Amplio, elegante y funcional, con instalaciones
                     de
                     categoría
                     y máximo confort.
