se modifican titulos

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                 aria-label="Toggle navigation"><i class="fa-solid fa-house"></i></button>
             <div class="collapse navbar-collapse texto-mayor flex-grow-0" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li><a class="nav-link" aria-hidden="true" href="#home">HOME</a></li>
-                    <li><a class="nav-link" aria-hidden="true" href="#reservas">RESERVAS</a></li>
+                    <li><a class="nav-link" aria-hidden="true" href="#home">INICIO</a></li>
+                    <li><a class="nav-link" aria-hidden="true" href="#reservas">RESERVA ONLINE</a></li>
                     <li><a class="nav-link" aria-hidden="true" href="#servicios">SERVICIOS</a></li>
-                    <li><a class="nav-link" aria-hidden="true" href="#empresa">NUESTRA EMPRESA</a></li>
-                    <li><a class="nav-link" aria-hidden="true" href="#redes-sociales">SEGUINOS</a></li>
+                    <li><a class="nav-link" aria-hidden="true" href="#empresa">EMPRESA</a></li>
+                    <li><a class="nav-link" aria-hidden="true" href="#redes-sociales">REDES</a></li>
                 </ul>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <section id="servicios" class="servicios">
             <!--Servicios ofrecidos por la empresa-->
             <section class="grid">
-                <h2 class="titulo-servicios texto-mayor">SERVICIOS DE SALÓN</h2>
+                <h2 class="titulo-servicios texto-mayor">NUESTROS SERVICIOS</h2>
                 <div class="items">
                     <!--Servicio 1 - Catering-->
                     <div class="item">
